Added JWT token , Token Service, jwtbearer, added nuGet packages, login endpoint tests , move logic to Extension method

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingreal.db"
-  }
+  },
+  "TokenKey": "super secret key for development super secret key for development super secret key for development"
 }
